--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     padding: 15px;
     margin-bottom: 10px;
     border: 2px solid orange;
+    color: red;
 }
 
 #vung2 {
@@ -16,6 +17,7 @@ body {
     padding: 15px;
     margin-bottom: 10px;
     border: 2px solid blue;
+    color: yellow;
 }
 
 #vung3 {
@@ -23,4 +25,5 @@ body {
     color: #333;
     padding: 15px;
     border: 2px solid red;
+    color: white;
 }
