--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
     color: red;
      height: 20px;
       box-sizing: border-box;
+    display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #vung2 {
