--- a/style.css
+++ b/style.css
@@ -1,36 +1,34 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-}
-
 #vung1 {
-    background-color: yellow;
-    padding: 15px;
-    margin-bottom: 10px;
-    border: 5px solid orange;
-    color: red;
-     height: 20px;
-      box-sizing: border-box;
-    display: flex;
+  background-color: blue;
+  display: flex;
   flex-direction: column;
   align-items: center;
+  color: yellow;
+  height: 1500px;
+  border: 10px solid brown;
+  box-sizing: border-box;
 }
-
 #vung2 {
-    background-color: lightblue; 
-    color: darkblue;
-    padding: 15px;
-    margin-bottom: 10px;
-    border: 5px solid blue;
-    color: yellow;
-     height: 70px;
+  background-color: yellow;
+  color: red;
+  height: 200px;
+  border: 10px solid skyblue;
+  box-sizing: border-box;
 }
-
 #vung3 {
-    background-color: lightcoral; 
-    color: #333;
-    padding: 15px;
-    border: 5px solid red;
-    color: white;
-    height: 20px;
+  background-color: red;
+  color: black;
+  height: 180px;
+  border: 10px solid pink;
+  box-sizing: border-box;
+}
+img {
+  width: 48px;
+  height: 48px;
+  display: block;
+  margin-top: 10px;
+}
+#vung1 p {
+  text-align: center
+  width: 100%
 }
