--- a/style.css
+++ b/style.css
@@ -5,21 +5,21 @@
   align-items: center;
   color: yellow;
   height: 1500px;
-  border: 10px solid brown;
+  border: 20px solid brown;
   box-sizing: border-box;
 }
 #vung2 {
   background-color: yellow;
   color: red;
   height: 200px;
-  border: 10px solid skyblue;
+  border: 20px solid skyblue;
   box-sizing: border-box;
 }
 #vung3 {
   background-color: red;
-  color: black;
+  color: white;
   height: 180px;
-  border: 10px solid pink;
+  border: 20px solid pink;
   box-sizing: border-box;
 }
 img {
