--- a/style.css
+++ b/style.css
@@ -1,34 +1,98 @@
 #vung1 {
-  background-color: blue;
+    background-color: blue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: yellow;
+    height: 300px;
+    border: 10px solid brown;
+    box-sizing: border-box;
+  }
+  #vung2 {
+    background-color: yellow;
+    color: red;
+    min-height: 400px;
+    border: 10px solid skyblue;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start; 
+    padding-top: 10px;
+	.form-box {
+  border: 3px solid black;
+  padding: 20px;
+}
+.form-row {
+  margin-bottom: 1px;
+}
+.form-row label {
+  display: inline-block;
+}
+.form-input {
+  width: 300px;
+}
+select {
+  width: 300px;
+}
+.checkbox-row {
+}
+.checkbox-row input {
+}
+.btn {
+}
+.btn:hover {
+  background: lightblue;
+}
+  }
+  #vung3 {
+    background-color: red;
+    color: black;
+    height: 100px;
+    border: 10px solid pink;
+    box-sizing: border-box;
+  }
+  img {
+    width: 48px;
+    height: 48px;
+    display: block;
+    margin-top: 10px;
+  }
+  #vung1 p {
+    text-align: center;
+  }
+  .score-table {
+  }
+#vung1-menu {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: yellow;
-  height: 1500px;
-  border: 20px solid brown;
-  box-sizing: border-box;
+  flex-direction: row;
+  justify-content: center; 
+  width: 100%;
 }
-#vung2 {
-  background-color: yellow;
-  color: red;
-  height: 200px;
-  border: 20px solid skyblue;
-  box-sizing: border-box;
+#vung1-menu p {
+  margin: 0 5px; 
+  text-align: center;
 }
-#vung3 {
-  background-color: red;
-  color: white;
-  height: 180px;
-  border: 20px solid pink;
-  box-sizing: border-box;
+#vung1-menu a {
+  text-decoration: none; 
+  color: dark blue;
 }
-img {
-  width: 48px;
-  height: 48px;
-  display: block;
-  margin-top: 10px;
+#vung2 table {
+  width: 90%; 
+  border-collapse: collapse; 
+  margin: 10px auto; 
 }
-#vung1 p {
-  text-align: center
-  width: 100%
+#vung2 th {
+  color: black;
+  padding: 8px;
+  border: 1px solid black;
+  text-align: center;
+}
+#vung2 td {
+  padding: 8px;
+  border: 1px solid black;
+  text-align: center;
+  color: black;
+}
+#vung1-menu a {
+  border: 8px solid black;           
 }
